Testsuite/ManualTests/729/729.c.gcov
        -:    0:Source:729.c
        -:    0:Graph:729.gcno
        -:    0:Data:729.gcda
        -:    0:Runs:1
        -:    1:/* PR 5967, PR 7114 */
        -:    2:/* { dg-do run } */
        -:    3:/* { dg-require-profiling "-pg" } */
        -:    4:/* { dg-options "-O2 -pg" } */
        -:    5:/* { dg-options "-O2 -pg -static" { target hppa*-*-hpux* } } */
        -:    6:/* { dg-error "profiler" "No profiler support" { target xstormy16-*-* } 0 } */
        -:    7:
        -:    8:extern void abort(void);
        -:    9:
        1:   10:long foo(long x) {
        1:   11:  long i, sum = 0;
       10:   12:  long bar(long z) { return z * 2; }
        -:   13:
       11:   14:  for (i = 0; i < x; i++)
       10:   15:    sum += bar(i);
        -:   16:
        1:   17:  return sum;
        -:   18:}
        -:   19:
        1:   20:int main(void) {
        1:   21:  if (foo(10) != 90)
    #####:   22:    abort();
        1:   23:  return 0;
        -:   24:}
        -:   25:
        -:   26:/* { dg-final { cleanup-profile-file } } */
